--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.port=9000
 spring.cloud.config.server.git.uri=https://github.com/wangxy123/springcloudconfigservice.git
 spring.cloud.config.server.git.searchPaths=
 spring.cloud.config.label=master
-spring.cloud.config.server.git.username=w125479558@126.com
-spring.cloud.config.server.git.password=199148wang
+spring.cloud.config.server.git.username=
+spring.cloud.config.server.git.password=
 
 management.security.enabled=false
 
