--- a/service-provider/src/main/resources/application.properties
+++ b/service-provider/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.cloud.config.profile=dev
 
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config-server
+
+test1=para3
+name=bbb
+pass=111
