1.provider使用starter-swagger 2.endpoint增加根路徑

--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -11,3 +11,8 @@ management.security.enabled=false
 
 
 eureka.client.serviceUrl.defaultZone=http://peer1:8098/eureka
+
+management.context-path=/xywang
+#重定义健康监控接口
+eureka.instance.statusPageUrlPath=${management.context-path}/info
+eureka.instance.healthCheckUrlPath=${management.context-path}/health
