--- a/eurekaserver/src/main/resources/application.properties
+++ b/eurekaserver/src/main/resources/application.properties
@@ -4,7 +4,10 @@ spring.application.name=eureka-server1
 eureka.client.serviceUrl.defaultZone=http://peer2:8099/eureka
 management.security.enabled=false
 
-
+management.context-path=/xywang
+#重定义健康监控接口
+eureka.instance.statusPageUrlPath=${management.context-path}/info
+eureka.instance.healthCheckUrlPath=${management.context-path}/health
 #spring.cloud.config.label=master
 #spring.cloud.config.profile=dev
 #spring.cloud.config.uri= http://localhost:9000/
