--- a/service-provider/src/main/resources/bootstrap.properties
+++ b/service-provider/src/main/resources/bootstrap.properties
@@ -14,3 +14,11 @@ spring.cloud.config.profile=dev
 
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config-server
+
+management.context-path=/xywang
+#重定义健康监控接口
+eureka.instance.statusPageUrlPath=${management.context-path}/info
+eureka.instance.healthCheckUrlPath=${management.context-path}/health
+
+swagger.base-path=/**
+swagger.exclude-path=/xywang/**, /error
