--- a/spring-admin-web/src/main/resources/application.properties
+++ b/spring-admin-web/src/main/resources/application.properties
@@ -8,3 +8,5 @@ management.security.enabled=false
 
 #指定注册的Eureka Server地址
 eureka.client.serviceUrl.defaultZone=http://peer1:8098/eureka,http://peer2:8099/eureka
+
+spring.boot.admin.discovery.converter.management-context-path=/xywang
