增加fegin客户端负载均衡

--- a/service-provider/src/main/resources/application.properties
+++ b/service-provider/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Service Provider服务的端口号
-server.port=9001
+server.port=9003
 #Service Provider注册的name，唯一标识
 spring.application.name=service-provider
 
@@ -13,5 +13,5 @@ spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config-server
 
 test1=para3
-name=bbb
+name=name
 pass=111
