--- a/eurekaserver/src/main/resources/application.properties
+++ b/eurekaserver/src/main/resources/application.properties
@@ -11,3 +11,11 @@ eureka.instance.healthCheckUrlPath=${management.context-path}/health
 #spring.cloud.config.label=master
 #spring.cloud.config.profile=dev
 #spring.cloud.config.uri= http://localhost:9000/
+
+# 设为false，关闭自我保护
+#eureka.server.enable-self-preservation=false
+# 清理间隔（单位毫秒，默认是60*1000）
+#eureka.server.eviction-interval-timer-in-ms=30000
+
+#eureka.client.fetch-registry=true
+#eureka.client.register-with-eureka=false
