--- a/service-client/src/main/resources/application.properties
+++ b/service-client/src/main/resources/application.properties
@@ -19,3 +19,13 @@ management.context-path=/xywang
 #重定义健康监控接口
 eureka.instance.statusPageUrlPath=${management.context-path}/info
 eureka.instance.healthCheckUrlPath=${management.context-path}/health
+
+
+
+feign.httpclient.enabled=true
+feign.okhttp.enabled=false
+
+ribbon.ReadTimeout=60000
+ribbon.ConnectTimeout=60000
+
+feign.hystrix.enabled=true
